styles.css
html, body {
  width: 100%;
  margin: 0;
  padding: 0;
  color: #005064;
  background-color: #e8fdff;
  text-align: center;
  font-family: "Courier New", Courier, monospace;
}

.display-3 {
  font-family: "Amatic SC", cursive, "Garamond", Georgia, serif;
  color:  #e8fdff;
}

.display-4 {
  font-family: 'Great Vibes', cursive;
  color:  #e8fdff;
}

.lead {
  color:  #e8fdff;
}

.display-5 {
  font-family: 'Great Vibes', cursive;
  color:  #005064;
}

.display-6 {
  font-family: "Amatic SC", cursive, "Garamond", Georgia, serif;
  color:  #005064;
}

.page-container {
  position: relative;
  min-height: 100vh;
}

.container-work {
  padding-bottom: 2.5rem;
}

/*  -------- Navbar --------  */
.nav-wrapper {
  position: fixed;
  margin: auto;
  width: 100%;
  z-index: 9999;
}

nav {
  display: flex;
}

.bg-custom {
  background-color: #005064;
}

.navbar-brand {
  font-family: "Lovers Quarrel", cursive;
  font-size: 2em;
  min-width: 1em;
}

/* Navbar brand and text color */
.navbar-custom .navbar-brand,
.navbar-custom .navbar-text {
    color: red !important;
}

/* Navbar link color */
.navbar-custom .navbar-nav .nav-link {
    color: green;
}
/* Navbar color of active or hovered links */
.navbar-custom .nav-item.active .nav-link,
.navbar-custom .nav-item:focus .nav-link,
.navbar-custom .nav-item:hover .nav-link {
    color: purple;
}

.navbar-collapse {
  justify-content: flex-end;
}

/*  -------- Jumbotron --------  */
.jumbotron {
  background-color: #005064;
}

/*  -------- Cards --------  */
.card-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
}

.card {
  margin: 20px;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.3);
  transition: 0.3s;
}

.card:hover {
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.3);
}

.card-title, .card-text {
  color: #e8fdff;
}

/*  -------- Footer --------  */
.footer {
  bottom: 0;
  height: 2.5rem;
  background-color: #005064;
  color: #e8fdff;
}

/*  -------- Media queries --------  */
/*
Extra small devices (phones, 600px and down)
@media only screen and (max-width: 600px) {...}

Small devices (portrait tablets and large phones, 600px and up)
@media only screen and (min-width: 600px) {...}

Medium devices (landscape tablets, 768px and up)
@media only screen and (min-width: 768px) {...}

Large devices (laptops/desktops, 992px and up)
@media only screen and (min-width: 992px) {...}

Extra large devices (large laptops and desktops, 1200px and up)
@media only screen and (min-width: 1200px) {...}
*/


/*
font-family: 'Amatic SC', cursive;
font-family: 'Great Vibes', cursive;
font-family: 'Lovers Quarrel', cursive;
font-family: 'Eagle Lake', cursive;
*/

